refactor: refactor products list