@@ -1,9 +1,9 @@
 package br.com.quaz.store.services;
 
 import br.com.quaz.store.controllers.ProductController;
+import br.com.quaz.store.controllers.response.ProductsListResponse;
 import br.com.quaz.store.entities.Product;
 import br.com.quaz.store.repositories.ProductRepository;
-import br.com.quaz.store.controllers.response.ProductsListResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Example;
 import org.springframework.data.domain.ExampleMatcher;
@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static br.com.quaz.store.services.converters.ProductConverter.convertProductDTOToListResponse;
 import static br.com.quaz.store.services.converters.ProductConverter.convertProductEntityToDTO;
@@ -36,13 +35,12 @@ public class ListProductService {
         final var product = Product.builder().name(name).isPromotion(isPromotion).build();
         final var listProducts = productRepository.findAll(Example.of(product, exampleMatcher), pageable);
 
-        return listProducts.stream()
+        return listProducts
                 .filter(f -> !Objects.nonNull(categoryUuid) || categoryUuid.isEmpty() || f.getCategory().getUuid().toString().equals(categoryUuid))
                 .map(productPage -> {
                     final var response = convertProductDTOToListResponse(convertProductEntityToDTO(productPage));
                     response.add(linkTo(methodOn(ProductController.class).findProductById(response.getUuid())).withSelfRel());
                     return response;
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 }
